Renaming from my copypasta.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rockemsockemsockets",
+  "name": "mazer2sonofmazer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
